test/Fail/NoIrrelevance6.agda
{-# OPTIONS --no-irrelevance #-}

data D .(A : Set) : Set where
