test/Fail/NoIrrelevance6.err
NoIrrelevance6.agda:3.6-24: error: [NeedOptionIrrelevance]
Irrelevance modality is disabled (use options --irrelevance and
--no-irrelevance to enable/disable irrelevance)
